--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "id": "9f0f6860",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "id": "f2d1bfa0",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "id": "02eea377",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "id": "9f5369d1",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "id": "223f5271",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "id": "100740f5",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "id": "15a78e90",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "id": "8645afb7",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "id": "d7e68a90",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "id": "e4611d41",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "id": "a7f975f7",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "id": "4e367829",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 13,
    "id": "baf2b4e2",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "id": "4b35b5d2",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "id": "90d475e7",
    "metadata": {},
    "outputs": [
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "id": "02490680",
    "metadata": {},
    "outputs": [
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 17,
    "id": "bcc4e323",
    "metadata": {},
    "outputs": [
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 18,
    "id": "948e7b8e",
    "metadata": {},
    "outputs": [
@@ -2700,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 19,
    "id": "1bd42f6d",
    "metadata": {},
    "outputs": [
@@ -2951,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 20,
    "id": "48026c26",
    "metadata": {},
    "outputs": [
@@ -3184,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 21,
    "id": "f9ecbe97",
    "metadata": {},
    "outputs": [
@@ -3435,7 +3435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 22,
    "id": "4c0b3e09",
    "metadata": {},
    "outputs": [
@@ -3686,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 23,
    "id": "1b3a418b",
    "metadata": {},
    "outputs": [
@@ -3932,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 24,
    "id": "e40b7d82",
    "metadata": {},
    "outputs": [],
@@ -3994,10 +3994,10 @@
     "        # One of the two detections failed in every round!\n",
     "        return {}\n",
     "    \n",
-    "    min_number_of_rounds = min(len(round_metrics[base_path_list[0]]), len(round_metrics[base_path_list[1]]))\n",
+    "    min_number_of_runs = min(len(round_metrics[base_path_list[0]]), len(round_metrics[base_path_list[1]]))\n",
     "\n",
     "    Effectiveness_means_list = []\n",
-    "    for run_i in range(0, min_number_of_rounds):\n",
+    "    for run_i in range(0, min_number_of_runs):\n",
     "        # Calculate the Effectiveness of the run\n",
     "        round_metrics_detection_1 = round_metrics[base_path_list[0]][run_i]\n",
     "        round_metrics_detection_2 = round_metrics[base_path_list[1]][run_i]\n",
@@ -4032,6 +4032,10 @@
     "        effectiveness_all = fmean(effectivenesses) if effectivenesses else 0\n",
     "        Effectiveness_means_list.append(effectiveness_all)\n",
     "\n",
+    "    for i in range(0, 3 - min_number_of_runs):\n",
+    "        # Add an effectiveness of 0 for every run that failed\n",
+    "        Effectiveness_means_list.append(0.0)\n",
+    "\n",
     "    Precision_list = []\n",
     "    Recall_list = []\n",
     "    for run_id in detected_clients_set_by_run.keys():\n",
@@ -4050,6 +4054,10 @@
     "        Recall = TP / (TP + FN) if TP != 0 else 0\n",
     "        Precision_list.append(Precision)\n",
     "        Recall_list.append(Recall)\n",
+    "\n",
+    "    for i in range(0, 3 - len(detected_clients_set_by_run.keys())):\n",
+    "        Precision_list.append(0.0)\n",
+    "        Recall_list.append(0.0)\n",
     "\n",
     "    Precision_avg = fmean(Precision_list)\n",
     "    Precision_std = stdev(Precision_list)\n",
@@ -4070,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 25,
    "id": "e7c0a016",
    "metadata": {},
    "outputs": [],
@@ -4133,7 +4141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 26,
    "id": "b1dbebd2",
    "metadata": {},
    "outputs": [
@@ -4156,7 +4164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 27,
    "id": "b9d9cf97",
    "metadata": {},
    "outputs": [
@@ -4179,7 +4187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 28,
    "id": "5be837bc",
    "metadata": {},
    "outputs": [],
@@ -4341,7 +4349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 29,
    "id": "aaebd875",
    "metadata": {},
    "outputs": [
@@ -4481,7 +4489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 30,
    "id": "9a839ece",
    "metadata": {},
    "outputs": [
